      pointers to the underlying matrix data. This allows `pyglet`'s GL
      implementation to directly access the data contained in these matrices
      without needing to create pointers yourself from returned `ndarray`
      objects. See `Known Issues` for more information about possible problems
      associated with caching.

Bug Fixes:

    - Fixed `LibOVRPose.setIdentity()` method not working.
    - Fixed some errata in the documentation.

Breaking Changes:

    - None

Known Issues:

    - Users need to be aware of idiosyncrasies related to the memory
      improvements listed above. One must be careful not to modify returned
      arrays since they will also modify their caches stored by the `LibOVRPose`
      instance. Furthermore, if the `LibOVRPose` instance is garbage collected
      because it is no longer referenced or manually deleted (by using `del`),
      any `ndarrays` or pointers still alive will access invalid data since
      the caches had their memory freed! This problem can be caused by doing the
      following::

            # don't do this
            myPose = LibOVRPose((0., 0., -2.))
            myMatrix = myPose.modelMatrix

      It's best to keep pose objects alive by not creating references to their
      data and using them directly::

            # don't do this ...
            myPose = LibOVRPose((0., 0., -2.))
            modelMatrix = myPose.modelMatrix
            viewMatrix = myPose.viewMatrix
            modelViewMatrix = numpy.matmul(viewMatrix, modelMatrix)

            # instead do this ...
            modelViewMatrix = numpy.matmul(myPose.viewMatrix, myPose.modelMatrix)

      Keep in mind there is near zero-overhead to doing this since `ndarray`
      objects are not created when accessing an attribute. If you wish not to
      keep the `LibOVRPose` object alive for some reason (or can't), you can
      copy the data like so::

            myPose = LibOVRPose((0., 0., -2.))